--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
-		<title>Title</title>
+		<title>Parse</title>
 		<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -67,7 +67,7 @@
 					for(var i in format){
 						tmp.push( row[j].substr(format[i][5]-1, format[i][4]) );
 					}
-					result.push(tmp.join(','));
+					result.push(tmp.join('\t'));
 				}
 				
 				//console.log(result);
@@ -88,11 +88,16 @@
 				<span class="input-group-addon">Format</span>
 				<select class="form-control" name="type" style="width: 100px">
 					<option value="DD8592">DD8592</option>
+					<option value="DD9395">DD9395</option>
+					<option value="DD96100">DD96100</option>
+					<option value="DO8595">DO8595</option>
+					<option value="DO9698">DO9698</option>
+					<option value="DO99100">DO99100</option>
 				</select>
 				<input class="form-control file" type="file" name="files[]" multiple style="width: 100px">
 			</div>
 			<input type="hidden" id="data">
-			<textarea class="form-control" id="container" style="height: calc(100% - 50px)" placeholder="Results"></textarea>
+			<textarea class="form-control" id="container" style="height: calc(100% - 50px); white-space: nowrap;" placeholder="Results"></textarea>
 		</div>
 	</body>
 </html>
